; ModuleID = '/home/carl/AnghaBench/linux/drivers/media/platform/davinci/extr_dm644x_ccdc.c_ccdc_enable_vport.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/media/platform/davinci/extr_dm644x_ccdc.c_ccdc_enable_vport.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CCDC_ENABLE_VIDEO_PORT = common dso_local global i32 0, align 4
@CCDC_FMTCFG = common dso_local global i32 0, align 4
@CCDC_DISABLE_VIDEO_PORT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @ccdc_enable_vport to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ccdc_enable_vport(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = icmp ne i32 %3, 0
  br i1 %4, label %5, label %9

5:                                                ; preds = %1
  %6 = load i32, i32* @CCDC_ENABLE_VIDEO_PORT, align 4
  %7 = load i32, i32* @CCDC_FMTCFG, align 4
  %8 = call i32 @regw(i32 %6, i32 %7)
  br label %13

9:                                                ; preds = %1
  %10 = load i32, i32* @CCDC_DISABLE_VIDEO_PORT, align 4
  %11 = load i32, i32* @CCDC_FMTCFG, align 4
  %12 = call i32 @regw(i32 %10, i32 %11)
  br label %13

13:                                               ; preds = %9, %5
  ret void
}

declare dso_local i32 @regw(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
